--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
+<!--
+File: index.html
+Author: Juhász Kata
+Copyright: 2023, Juhász Kata
+Group: Szoft I-1 E
+Date: 2023-03-21
+Github: https://github.com/catlina83/
+Licenc: GNU GPL
+-->
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo</title>
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
     <div class="container">
         <h1>Todo</h1>
-        <table>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Az</th>
@@ -18,6 +29,10 @@
             </thead>
             <tbody id="tbody"></tbody>
         </table>
+
+    </div>
+    <div class="about">
+        Juhász Kata, 2023-03-21, Szoft I-1 E
 
     </div>
     <script src="app.js"></script>
